# seller-agent

./: .gitignore  404.html  index.html  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
FREEWHEEL_MCP_TOOL_PROPOSAL/: index.html
PRODUCTION_DATA_INTEGRATION/: index.html
api/: openapi.json
api/a2a/: index.html
api/agent-discovery/: index.html
api/authentication/: index.html
api/change-requests/: index.html
api/mcp/: index.html
api/orders/: index.html
api/overview/: index.html
api/quotes/: index.html
architecture/agentcore/: index.html
architecture/data-flow/: index.html
architecture/overview/: index.html
architecture/storage/: index.html
docs/: PRODUCTION_DATA_INTEGRATION.md  index.md
docs/architecture/: agentcore.md  overview.md
docs/guides/: agentcore-deployment.md  claude-desktop-setup.md  deployment.md
event-bus/overview/: index.html
getting-started/quickstart/: index.html
guides/agent-management/: index.html
guides/agentcore-deployment/: index.html
guides/approval-rules/: index.html
guides/chatgpt-setup/: index.html
guides/claude-desktop-setup/: index.html
guides/configuration/: index.html
guides/deployment/: index.html
guides/developer-setup/: index.html
guides/inventory-sync/: index.html
guides/media-kit/: index.html
guides/pricing-rules/: index.html
guides/publisher-setup/: index.html
guides/troubleshooting/: index.html
infra/aws/agentcore/: agentcore-network.yaml  deploy.sh  main-agentcore.yaml  (+2 more)
integration/buyer-agent/: index.html
integration/negotiation/: index.html
overrides/: main.html
patches/: __init__.py  crewai_agentcore_memory.py  crewai_bedrock_fix.py
search/: search_index.json
state-machines/change-request-flow/: index.html
state-machines/order-lifecycle/: index.html
tests/: test.sh
tests/integration/: test_deal_flow_e2e.py  test_mcp_integration.py  test_mcp_streamable.py  test_packages_audience_filter.py  test_schema_drift_canonical.py  test_setup_wizard_flow.py
tests/unit/: test_agentic_audience_match.py  test_audience_capabilities.py  test_audience_plan_validation.py  test_capability_audience_block.py  test_deal_booking_snapshot.py  test_event_bus.py  test_freewheel_mcp_client.py  test_freewheel_oauth.py  test_mcp_server.py  test_negotiation_engine.py  test_openrtb_parser.py  test_order_endpoints.py  test_order_state_machine.py  test_packages_audience_filter.py  test_ssp_connectors.py
validation/buyer-compatibility-report/: index.html
(+47 files in other folders)
